- https://github.com/eclipse-syson/syson/issues/91[#91] [general-view] Add NodeTools to create compartment elements from the compartment's parent node. For example, it is now possible to create an `AttributeUsage` in the `PartDefinition` palette.
- https://github.com/eclipse-syson/syson/issues/93[#93] [diagrams] Reorganize General View diagram palette with several tool sections.

=== New features

- https://github.com/eclipse-syson/syson/issues/97[#97] [explorer] Add a filter allowing to hide membership elements in the Explorer view.
- https://github.com/eclipse-syson/syson/issues/98[#98] [explorer] Add filters allowing to hide KerML/SysML libraries in the Explorer view.

== v2024.1.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/52[#52] [services] All `findUsageByName` and `findDefinitionByName` method have been replaced by the new `findByNameAndType` in `org.eclipse.syson.services.UtilService`.
- Delete useless fork of `UploadDocumentEventHandler` & `DocumentController` from Sirius Web.

=== Dependency update

- Switch to Sirius Web 2024.1.1 (Please do not use new Portal representation introduced by this release of Sirius Web, it will be removed in SysON soon (see this ticket in Sirius Web)[https://github.com/eclipse-sirius/sirius-web/issues/3013], when Sirius Web will allow to configure which representations can be used or not in Sirius Web-based applications).
- https://github.com/eclipse-syson/syson/issues/52[#52] [metamodel] SysON SysMLv2 metamodel module now depends on `org.eclipse.emf.ecore.xmi` and `java-uuid-generator`.
- Switch to vite 4.5.2

=== New features

- https://github.com/eclipse-syson/syson/issues/48[#48] [general-view] Display help background message on empty general-view diagram.
- https://github.com/eclipse-syson/syson/issues/52[#52] [syson] Add support for SysMLv2 standard libraries.
Only some KerML libraries have been added: