@@ -40,6 +40,9 @@ Also allow the creation of elements with their containing Membership in one clic
 - https://github.com/eclipse-syson/syson/issues/88[#88] [diagrams] Improves creation tool names by adding spaces between type words and removing "Usage" from tool names.
 - https://github.com/eclipse-syson/syson/issues/91[#91] [general-view] Add NodeTools to create compartment elements from the compartment's parent node. For example, it is now possible to create an `AttributeUsage` in the `PartDefinition` palette.
 - https://github.com/eclipse-syson/syson/issues/93[#93] [diagrams] Reorganize General View diagram palette with several tool sections.
+- https://github.com/eclipse-syson/syson/issues/105[#105] [details] In the Details view, display the standard libraries in Reference Widget's model browser dialog.
+Also remove the standard libraries elements in Reference Widget's candidates (when you click in the background part of the widget) for now as it leads to performance issues.
+They will be only accessible through the model browser dialog.
 
 === New features
 
